# fpfd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  ProjectHome.md  README  THANKS  autogen.sh  configure.ac
bench/: Makefile.am  add-gcc.c  add.c  bench-fpfd.c  bench-fpfd.h  bench-gcc.c  bench.c  bench.h  div-gcc.c  div.c  fma.c  fpfd32_impl_compress.gnuplot  fpfd32_impl_expand.gnuplot  htable.c  impl_addsub.c  impl_compress.c  impl_div.c  impl_expand.c  impl_inc.c  impl_mul.c  impl_scale.c  main.c  mul-gcc.c  mul.c  plot.sh  random.c  sub-gcc.c  sub.c  uticks.c  x.c
bench/x86/: bench-x86.c  bench-x86.h  div-x86.c  mul-x86.c  rdtsc-x86.s  rdtsc.s  ticks-x86.s
bench/x86_64/: arch_init-x86_64.c  bench-x86_64.c  bench-x86_64.h  div-x86_64.c  mul-x86_64.c  rdtsc-x86_64.s  ticks-x86_64.s  uncertainty-x86_64.c
branches/cohort/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
branches/cohort/bench/: add-gcc.c  bench-fpfd.c  bench-fpfd.h  bench.h  div.c  impl_inc.c  impl_scale.c  mul.c  sub-gcc.c
branches/cohort/bench/x86/: arch_init-x86.c  bench-x86.c  bench-x86.h
branches/cohort/bench/x86_64/: bench-x86_64.c
branches/cohort/doc/: fpfd.texi
branches/cohort/libfpfd/: Makefile.am  div.c  fpfd.h  fpfd_impl.h  mul.c  neg.c  pred.c  sub.c
branches/cohort/libfpfd-bid/: Makefile.am  gcc.c
branches/cohort/libfpfd-bid/x86/: addsub-x86.s  div-x86.s  expand-x86.s  mul-x86.s
branches/cohort/libfpfd-bid/x86_64/: div-x86_64.s  expand-x86_64.s  inc-x86_64.s  mul-x86_64.s  scale-x86_64.s
branches/cohort/libfpfd-dpd/: Makefile.am  multable.c
branches/cohort/libfpfd-dpd/x86/: addsub-x86.s  dpdtable-x86.sh
branches/cohort/libfpfd-dpd/x86_64/: addsub-x86_64.s  div-x86_64.s  scale-x86_64.s
branches/cohort/tests/: Makefile.am  impl_addsub-bid.c  impl_compress-bid.c  impl_compress-dpd.c  impl_div-bid.c  impl_expand-bid.c  impl_inc-dpd.c  impl_mul-bid.c  signedzero.c  test.c  test.h
check/: Makefile.am  check.c  check.h  impl_compress-bid.c  impl_compress-dpd.c  impl_expand-bid.c  impl_expand-dpd.c  impl_scale-dpd.c  noncanonical-bid.c  noncanonical-dpd.c  noncanonical.c  noncanonical.h  scale-bid.c  scale-dpd.c  signedzero.c
doc/: Makefile.am  fpfd.texi
libfpfd/: Makefile.am  add.c  div.c  fma.c  fpfd.h  fpfd_impl.h  mul.c  nan.c  neg.c  pred.c  random.c  round.c  set.c  sub.c  tern.c
libfpfd-bid/: Makefile.am
libfpfd-bid/x86/: compress-x86.s  compress.s  div-x86.s  expand-x86.s  expand.s  inc.s  mul-x86.s  mul.s  odd-x86.s  scale-x86.s  scaletable-x86.s  scaletable.s
libfpfd-bid/x86_64/: addsub-x86_64.s  compress-x86_64.s  div-x86_64.s  expand-x86_64.s  inc-x86_64.s  mul-x86_64.s  odd-x86_64.s  scale-x86_64.s
libfpfd-dpd/: Makefile.am  divtable.c  dpdtable.c  gcc.c
libfpfd-dpd/x86/: addsub-x86.s  addsub.s  compress-x86.s  div-x86.s  dpdtable-x86.sh  encoding-x86.s  expand-x86.s  expand.s  inc-x86.s  inc.s  mul-x86.s  normalize.s  odd-x86.s  scale-x86.s  scale.s
libfpfd-dpd/x86_64/: addsub-x86_64.s  compress-x86_64.s  div-x86_64.s  expand-x86_64.s  inc-x86_64.s  mul-x86_64.s  scale-x86_64.s
misc/: dpdtable.c
src/: Makefile.am  add.c  expand.c  fpfd.h  fpfd_impl.h  nan.c  ops.c  set.c  tern.c
src/dpd/: Makefile.am
src/dpd/x86/: contract.s  inc.s
src/x86/: bcd_inc.s  bcd_normalize.s  bin_inc.s  bin_mul.s  dpdtable  from_bcd.s  from_bin.s  to_bcd.s  to_bin.s
tests/: Makefile.am  impl_addsub-bid.c  impl_addsub-dpd.c  impl_compress-dpd.c  impl_div-bid.c  impl_div-dpd.c  impl_expand-bid.c  impl_expand-dpd.c  impl_mul-bid.c  impl_mul-dpd.c  impl_scale-bid.c  impl_scale-dpd.c  signedzero.c  test.c  test.h
trunk/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
trunk/bench/: Makefile.am  add-gcc.c  add.c  addsub.c  bench-fpfd.c  bench-fpfd.h  bench-gcc.c  bench-gcc.h  bench.c  bench.h  div-gcc.c  div.c  fma.c  htable.c  impl_addsub.c  impl_compress.c  impl_div.c  impl_expand.c  impl_inc.c  impl_mul.c  impl_scale.c  main.c  mul.c  plot.sh  random.c  sub-gcc.c  sub.c  xmalloc.c
trunk/bench/x86/: arch_init-x86.c  bench-x86.c  bench-x86.h  bench_loops-x86.c  div-x86.c  mul-x86.c  rdtsc-x86.s  ticks-x86.s  uncertainty-x86.c
trunk/bench/x86_64/: bench-x86_64.c  bench-x86_64.h  bench_loops-x86_64.c  div-x86_64.c  mul-x86_64.c  rdtsc-x86_64.s  ticks-x86_64.s  uncertainty-x86_64.c
trunk/check/: Makefile.am  check.c  check.h  impl_compress-dpd.c  impl_expand-bid.c  impl_expand-dpd.c  impl_scale-bid.c  noncanonical-bid.c  noncanonical-dpd.c  noncanonical.c  noncanonical.h  scale-bid.c  scale-dpd.c  signedzero.c
trunk/doc/: Makefile.am  fpfd.texi
trunk/libfpfd/: Makefile.am  add.c  div.c  fpfd.h  fpfd_impl.h  mul.c  nan.c  random.c  round.c  set.c  sin.c  sub.c  tern.c
trunk/libfpfd-bid/: Makefile.am  gcc.c
trunk/libfpfd-bid/x86/: addsub-x86.s  compress-x86.s  compress.s  contract.s  div-x86.s  expand.s  inc-x86.s  mul-x86.s  normalize.s  scale-x86.s  scale.s
trunk/libfpfd-bid/x86_64/: addsub-x86_64.s  compress-x86_64.s  div-x86_64.s  encoding-x86_64.s  expand-x86_64.s  inc-x86_64.s  mul-x86_64.s  odd-x86_64.s  scale-x86_64.s
trunk/libfpfd-dpd/: Makefile.am  dpdtable.c  gcc.c
trunk/libfpfd-dpd/x86/: addsub-x86.s  addsub.s  compress-x86.s  compress.s  contract.s  dpdtable-x86.sh  dpdtable.sh  expand-x86.s  expand.s  inc-x86.s  inc.s  mul-x86.s  multable-x86.sh  scale-x86.s  scale.s
trunk/libfpfd-dpd/x86_64/: addsub-x86_64.s  compress-x86_64.s  div-x86_64.s  expand-x86_64.s  inc-x86_64.s  mul-x86_64.s  scale-x86_64.s
trunk/misc/: dpdtable.c
trunk/src/: Makefile.am  add.c  dpdtable.s  fpfd.h  fpfd_impl.h  ops.c  panic.c  tern.c  try_enc.c  try_expand.c
trunk/src/x86/: bcd_inc.s  bcd_normalize.s  bin_inc.s  bin_mul.s  dpdtable  from_bcd.s  from_bin.s  to_bcd.s  to_bin.s
trunk/tests/: Makefile.am  cxx.cpp  impl_addsub-bid.c  impl_addsub-dpd.c  impl_compress-bid.c  impl_compress-dpd.c  impl_div-bid.c  impl_div-dpd.c  impl_expand-dpd.c  impl_inc-bid.c  impl_mul-dpd.c  impl_scale-bid.c  impl_scale-dpd.c  test.c  test.h
